feat: Add core functionality for mock builder
- Implement AST processing to filter public methods and clear their bodies.
- Add support for processing both individual files and directories.
- Introduce filtering by class name substrings.
- Handle PSR-4 compliant directory structure for output.
- Add configuration file support for default parameters.
- Include CLI argument parsing with priority over config files.

--- a/.gitattributes
+++ b/.gitattributes
@@ -4,3 +4,5 @@
 /.gitignore export-ignore
 /README.ru.md export-ignore
 /composer.lock export-ignore
+/.vs-mock-builder.php export-ignore
+/target export-ignore
