--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,8 @@
   },
   "require": {
     "php": ">=8.1",
-    "nikic/php-parser": "^5.4"
+    "nikic/php-parser": "^5.4",
+    "phpdocumentor/reflection-docblock": "^5.6"
   },
   "require-dev": {
     "phpstan/phpstan": "^2.1",
