feat: add dependency graph for accurate class hierarchy analysis
- Introduced a `Graph` class to build and manage a dependency graph of classes and interfaces.
- Added logic to collect class information from the AST, including parents, interfaces, and children.
- Implemented `isInstanceOf` method to check inheritance and interface implementation using the graph.
- Integrated the graph into `ModuleVisitor` for skipping classes related to `\Throwable`.
- Enabled caching of the dependency graph to improve performance on subsequent runs.

--- a/composer.json
+++ b/composer.json
@@ -33,7 +33,7 @@
     "build-mock": "php ./bin/vs-mock-builder.php",
     "vi:auto": "php vendor/bin/vs-version-increment",
     "vi:debug": "php vendor/bin/vs-version-increment --debug",
-    "stan": "vendor/bin/phpstan analyse src tests",
+    "stan": "vendor/bin/phpstan analyse src",
     "fixer": "vendor/bin/php-cs-fixer fix --dry-run --diff",
     "checkit": [
       "@fixer",
