fix: replace "resource" return type with "mixed" to resolve PHP warnings
- Problem: The "resource" type is not supported as a return type in PHP, causing warnings during code generation.
- Solution: Updated the `SetReturnTypes` visitor to replace "resource" with "mixed" in generated method signatures.

--- a/composer.json
+++ b/composer.json
@@ -30,7 +30,7 @@
     }
   ],
   "scripts": {
-    "build-mock": "php ./bin/vs-mock-builder.php",
+    "mock:build": "php ./bin/vs-mock-builder.php",
     "vi:auto": "php vendor/bin/vs-version-increment",
     "vi:debug": "php vendor/bin/vs-version-increment --debug",
     "stan": "vendor/bin/phpstan analyse src",
